near-sdk/compilation_tests/metadata_invalid_rust.stderr
error: Failed to parse code decorated with `metadata!{}` macro. Only valid Rust is supported.
  --> compilation_tests/metadata_invalid_rust.rs:5:1
   |
5  | / metadata! {
6  | | FOOBAR
7  | |
8  | | #[near_bindgen]
...  |
19 | | }
20 | | }
   | |_^
   |
   = note: this error originates in the macro `metadata` (in Nightly builds, run with -Z macro-backtrace for more info)
